<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NGA客户端</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_delete">删除</string>
    <string name="action_newtopic">发表新帖</string>
    <string name="action_reply">回帖</string>
    <string name="action_addfav">收藏</string>
    <string name="action_images">表情</string>
    <string name="action_upload">上传附件</string>
    <string name="action_send">发送</string>
    <string name="title_section1">个人中心</string>
    <string name="title_section2">常用板块</string>
    <string name="title_section3">全部板块</string>
    <string name="setting_tologin">登录</string>
    <string name="setting_myfav">我的收藏</string>
    <string name="setting_mytopic">我的主题</string>
    <string name="setting_myreply">我的回复</string>
    <string name="login_user">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_btn">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="request_timeout">网络不给力</string>
    <string name="request_dataerror">数据错误</string>
    <string name="request_neterror">网络错误</string>
    <string name="request_servererror">二哥玩坏了</string>
    <string name="request_othererror">请求错误</string>
    <string name="request_forbiddenerror">没有权限访问</string>
    <string name="view_listview_footer">正在加载…</string>
    <string name="reply_title_hint">标题</string>
    <string name="reply_content_hint">回复内容</string>
    <string name="add_fav_success">收藏成功</string>
    <string name="add_fav_already_add">已经收藏过了</string>
    <string name="add_fav_fail">收藏失败</string>
    <string name="loading_reply">正在发送</string>

</resources>